--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing = "20">
       <tr>
-        <td><img src="image/profile pic.jpg" alt="Akshay Profile" width="300" height="300"></td>
+        <td><img src="profile pic.jpg" alt="Akshay Profile" width="300" height="300"></td>
         <td><h1>Akshay Bhope</h1>
         <p><em>Founder and CTO of <strong><a href="https://about.google/">AScentech</a></strong></em></p>
         <p>I am a software engineer currently pursuing my masters in san jose state university</p></td>
